###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
  name = "hello",
  version = "1.0",
  compatibility_level = 1,
)

# https://registry.bazel.build/modules/rules_cc
bazel_dep(name = "rules_cc", version = "0.2.9")

# https://registry.bazel.build/modules/hermetic_cc_toolchain
bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.1")

# Dependency examples:
# bazel_dep(name = "bazel_skylib", version = "1.4.2")
# bazel_dep(name = "rules_java", version = "6.1.1")
